[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/playerPlaceholder.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 8.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 2 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="PhysicsHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FeetHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="FloorDetectorLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2( -4, 8 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="FloorDetectorRight" type="RayCast2D" parent="Raycasts"]
position = Vector2( 4, 8 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="ActionRaycast" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="LogJumpTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CoyoteTimer" to="." method="end_coyote_time"]
[connection signal="timeout" from="LogJumpTimer" to="." method="unlog_jump"]
